# Pickaxe

./: .gitignore  Cargo.toml  build.rs  template_example
cuda/: main.cu  sha256.cuh  sha256.ptx
src/: main.rs
