[package]
name = "pickaxe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0-rc.9", features = ["derive"] }
futures = "0.3"
rand = "0.8"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
base64 = "0.13.0"
jsonrpc = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = "0.28.1"
hex = "0.4.3"
rs_merkle = "1.2.0"
num-bigint = "0.4.3"
num_cpus = "1.13.1"
lazy_static = "1.4.0"
rustacuda = "0.1.3"
